@@ -2,6 +2,7 @@ package com.imcode.imcms.domain.service.api;
 
 import com.imcode.imcms.api.exception.DataIsNotValidException;
 import com.imcode.imcms.components.MenuHtmlConverter;
+import com.imcode.imcms.domain.dto.DocumentDTO;
 import com.imcode.imcms.domain.dto.MenuDTO;
 import com.imcode.imcms.domain.dto.MenuItemDTO;
 import com.imcode.imcms.domain.service.*;
@@ -35,15 +36,15 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
 
     private final VersionService versionService;
     private final DocumentMenuService documentMenuService;
+    private final LanguageService languageService;
+    private final MenuHtmlConverter menuHtmlConverter;
+
+    private final Function<MenuItemDTO, MenuItem> menuItemDtoToMenuItem;
+    private final BiFunction<MenuItem, DocumentDTO, MenuItemDTO> menuItemAndDocumentToMenuItemDTO;
     private final Function<List<MenuItemDTO>, Set<MenuItem>> menuItemDtoListToMenuItemList;
     private final Function<Menu, MenuDTO> menuToMenuDTO;
+    private final BiFunction<Menu, List<DocumentDTO>, MenuDTO> menuAndDocumentsToMenuDTO;
     private final UnaryOperator<MenuItem> toMenuItemsWithoutId;
-    private final LanguageService languageService;
-    private final Function<MenuItem, MenuItemDTO> menuItemToDTO;
-    private final BiFunction<MenuItem, Language, MenuItemDTO> menuItemToMenuItemDtoWithLang;
-    private final CommonContentService commonContentService;
-    private final Function<MenuItemDTO, MenuItem> menuItemDtoToMenuItem;
-    private final MenuHtmlConverter menuHtmlConverter;
 
     private final String REGEX_ANY_NUMBER = "\\.(?:\\b|-)([1-9]{1,2}[0]?|100)\\b";
 
@@ -53,62 +54,58 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
                        Function<MenuItem, MenuItemDTO> menuItemToDTO,
                        Function<List<MenuItemDTO>, Set<MenuItem>> menuItemDtoListToMenuItemList,
                        LanguageService languageService,
-                       Function<Menu, MenuDTO> menuToMenuDTO,
-                       UnaryOperator<MenuItem> toMenuItemsWithoutId,
-                       BiFunction<MenuItem, Language, MenuItemDTO> menuItemToMenuItemDtoWithLang,
-                       CommonContentService commonContentService,
+                       MenuHtmlConverter menuHtmlConverter,
                        Function<MenuItemDTO, MenuItem> menuItemDtoToMenuItem,
-                       MenuHtmlConverter menuHtmlConverter) {
+                       BiFunction<MenuItem, DocumentDTO, MenuItemDTO> menuItemAndDocumentToMenuItemDTO,
+                       Function<Menu, MenuDTO> menuToMenuDTO,
+                       BiFunction<Menu, List<DocumentDTO>, MenuDTO> menuAndDocumentsToMenuDTO,
+                       UnaryOperator<MenuItem> toMenuItemsWithoutId) {
 
         super(menuRepository);
         this.versionService = versionService;
         this.documentMenuService = documentMenuService;
-        this.menuItemToMenuItemDtoWithLang = menuItemToMenuItemDtoWithLang;
         this.menuItemDtoListToMenuItemList = menuItemDtoListToMenuItemList;
-        this.menuItemToDTO = menuItemToDTO;
         this.languageService = languageService;
         this.toMenuItemsWithoutId = toMenuItemsWithoutId;
-        this.commonContentService = commonContentService;
-        this.menuItemDtoToMenuItem = menuItemDtoToMenuItem;
         this.menuHtmlConverter = menuHtmlConverter;
+        this.menuItemDtoToMenuItem = menuItemDtoToMenuItem;
+        this.menuItemAndDocumentToMenuItemDTO = menuItemAndDocumentToMenuItemDTO;
         this.menuToMenuDTO = menuToMenuDTO;
+        this.menuAndDocumentsToMenuDTO = menuAndDocumentsToMenuDTO;
     }
 
     @Override
     public MenuDTO getMenuDTO(int docId, int menuIndex, String language, String typeSort) {
         final Version version = versionService.getDocumentWorkingVersion(docId);
-        final MenuDTO menuDTO = getMenuDTO(menuIndex, version, MenuItemsStatus.ALL, language, false);
-        final List<MenuItemDTO> menuItemsOf = menuDTO.getMenuItems();
+        final MenuDTO menuDTO = getMenuDTO(menuIndex, version, MenuItemsStatus.ALL, language);
 
         typeSort = menuDTO.getTypeSort();
-
         if (StringUtils.isBlank(typeSort)) {
             typeSort = String.valueOf(TREE_SORT); //default value
         }
 
-        setHasNewerVersionsInItems(menuItemsOf);
-
-        menuDTO.setMenuItems(getSortingMenuItemsByTypeSort(typeSort, menuItemsOf));
+        menuDTO.setMenuItems(getSortingMenuItemsByTypeSort(typeSort, menuDTO.getMenuItems()));
 
         return menuDTO;
     }
 
     @Override
     public List<MenuItemDTO> getSortedMenuItems(MenuDTO menuDTO, String langCode) {
-
         final String typeSort = menuDTO.getTypeSort();
 
         final List<MenuItemDTO> menuItems = menuDTO.getMenuItems().stream()
                 .flatMap(MenuItemDTO::flattened)
                 .collect(Collectors.toList());
 
-        //double map because from client to fetch itemsDTO which have only doc id and no more info..
-        final List<MenuItemDTO> menuItemsDTO = getSortedMenuItemsBySortOrder(menuItems.stream()
-                .map(menuItemDtoToMenuItem)
-                .map(menuItemToDTO)
-                .collect(Collectors.toList()));
+        final Map<Integer, DocumentDTO> documentDTOs = Imcms.getServices().getDocumentService().get(
+                menuItems.stream().map(MenuItemDTO::getDocumentId).toList()
+        ).stream().collect(Collectors.toMap(DocumentDTO::getId, Function.identity()));
 
-        setHasNewerVersionsInItems(menuItemsDTO);
+        //double map because from client to fetch itemsDTO which have only doc id and no more info..
+        final List<MenuItemDTO> menuItemsDTO = menuItems.stream()
+                .map(menuItemDtoToMenuItem)
+                .map(menuItem -> menuItemAndDocumentToMenuItemDTO.apply(menuItem, documentDTOs.get(menuItem.getDocumentId())))
+                .toList();
 
         return getSortingMenuItemsByTypeSort(typeSort, menuItemsDTO);
     }
@@ -121,11 +118,7 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
     @Override
     public List<MenuItemDTO> getVisibleMenuItems(int docId, int menuIndex, int versionNo, String language){
         final Version version = versionService.findByDocIdAndNo(docId, versionNo);
-        final List<MenuItemDTO> menuItemsOf = getMenuDTO(menuIndex, version, MenuItemsStatus.ALL, language, true).getMenuItems();
-
-        setHasNewerVersionsInItems(menuItemsOf);
-
-        return menuItemsOf;
+        return getMenuDTO(menuIndex, version, MenuItemsStatus.ALL, language).getMenuItems();
     }
 
     @Override
@@ -136,21 +129,13 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
     @Override
     public List<MenuItemDTO> getPreviewMenuItems(int docId, int menuIndex, int versionNo, String language) {
         final Version version = versionService.findByDocIdAndNo(docId, versionNo);
-        final List<MenuItemDTO> menuItemsOf = getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language, true).getMenuItems();
-
-        setHasNewerVersionsInItems(menuItemsOf);
-
-        return menuItemsOf;
+        return getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language).getMenuItems();
     }
 
     @Override
     public List<MenuItemDTO> getPublicMenuItems(int docId, int menuIndex, String language) {
         final Version version = versionService.getLatestVersion(docId);
-        final List<MenuItemDTO> menuItemsOf = getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language, true).getMenuItems();
-
-        setHasNewerVersionsInItems(menuItemsOf);
-
-        return menuItemsOf;
+        return getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language).getMenuItems();
     }
 
     @Override
@@ -163,9 +148,7 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
     public String getVisibleMenuAsHtml(int docId, int menuIndex, int versionNo, String language,
                                 String attributes, String treeKey, String wrap){
         final Version version = versionService.findByDocIdAndNo(docId, versionNo);
-        final List<MenuItemDTO> menuItemsOf = getMenuDTO(menuIndex, version, MenuItemsStatus.ALL, language, true).getMenuItems();
-
-        setHasNewerVersionsInItems(menuItemsOf);
+        final List<MenuItemDTO> menuItemsOf = getMenuDTO(menuIndex, version, MenuItemsStatus.ALL, language).getMenuItems();
 
         final List<MenuItemDTO> startedMenuItems = getFirstMenuItemsOf(getMenuItemsWithIndex(menuItemsOf));
 
@@ -182,9 +165,8 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
     public String getPreviewMenuAsHtml(int docId, int menuIndex, int versionNo, String language,
                                        String attributes, String treeKey, String wrap) {
         final Version version = versionService.findByDocIdAndNo(docId, versionNo);
-        final List<MenuItemDTO> menuItemsOf = getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language, true).getMenuItems();
+        final List<MenuItemDTO> menuItemsOf = getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language).getMenuItems();
 
-        setHasNewerVersionsInItems(menuItemsOf);
         final List<MenuItemDTO> startedMenuItems = getFirstMenuItemsOf(getMenuItemsWithIndex(menuItemsOf));
 
         return menuHtmlConverter.convertToMenuHtml(docId, menuIndex, startedMenuItems, attributes, treeKey, wrap);
@@ -194,9 +176,8 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
     public String getPublicMenuAsHtml(int docId, int menuIndex, String language,
                                       String attributes, String treeKey, String wrap) {
         final Version version = versionService.getLatestVersion(docId);
-        final List<MenuItemDTO> menuItemsOf = getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language, true).getMenuItems();
+        final List<MenuItemDTO> menuItemsOf = getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language).getMenuItems();
 
-        setHasNewerVersionsInItems(menuItemsOf);
         final List<MenuItemDTO> startedMenuItems = getFirstMenuItemsOf(getMenuItemsWithIndex(menuItemsOf));
 
         return menuHtmlConverter.convertToMenuHtml(docId, menuIndex, startedMenuItems, attributes, treeKey, wrap);
@@ -211,9 +192,8 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
     public String getVisibleMenuAsHtml(int docId, int menuIndex, int versionNo){
         final String language = Imcms.getUser().getLanguage();
         final Version version = versionService.findByDocIdAndNo(docId, versionNo);
-        final List<MenuItemDTO> menuItemsOf = convertItemsToFlatList(getMenuDTO(menuIndex, version, MenuItemsStatus.ALL, language, true).getMenuItems(), true);
+        final List<MenuItemDTO> menuItemsOf = convertItemsToFlatList(getMenuDTO(menuIndex, version, MenuItemsStatus.ALL, language).getMenuItems(), true);
 
-        setHasNewerVersionsInItems(menuItemsOf);
         final List<MenuItemDTO> startedMenuItems = getFirstMenuItemsOf(getMenuItemsWithIndex(menuItemsOf));
 
         return menuHtmlConverter.convertToMenuHtml(
@@ -226,10 +206,9 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
         final String language = Imcms.getUser().getLanguage();
         final Version version = versionService.getLatestVersion(docId);
         List<MenuItemDTO> menuItemsOf = convertItemsToFlatList(
-                getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language, true).getMenuItems(),
+                getMenuDTO(menuIndex, version, MenuItemsStatus.PUBLIC, language).getMenuItems(),
                 true);
 
-        setHasNewerVersionsInItems(menuItemsOf);
         final List<MenuItemDTO> startedMenuItems = getFirstMenuItemsOf(getMenuItemsWithIndex(menuItemsOf));
 
         return menuHtmlConverter.convertToMenuHtml(
@@ -362,48 +341,55 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
         repository.saveAll(saveMenus);
     }
 
-    private MenuDTO getMenuDTO(int menuIndex, Version version, MenuItemsStatus status, String langCode, boolean isVisible) {
+    private MenuDTO getMenuDTO(int menuIndex, Version version, MenuItemsStatus status, String langCode) {
         final Language language = languageService.findByCode(langCode);
         final Optional<Menu> menu = Optional.ofNullable(repository.findByNoAndVersionAndFetchMenuItemsEagerly(menuIndex, version));
         final UserDomainObject user = Imcms.getUser();
 
-        final Function<MenuItem, MenuItemDTO> menuItemFunction = isVisible
-                ? menuItem -> menuItemToMenuItemDtoWithLang.apply(menuItem, language)
-                : menuItemToDTO;
+        final MenuDTO menuDTO;
+        final Map<Integer, DocumentDTO> documentMap;
+        if(menu.isPresent()){
+            List<DocumentDTO> docs = Imcms.getServices().getDocumentService().get(
+                    menu.get().getMenuItems().stream().map(MenuItem::getDocumentId).collect(Collectors.toList())
+            );
 
-        final List<MenuItemDTO> sortedMenuItems = getSortedMenuItemsBySortOrder(menu
-                .map(Menu::getMenuItems)
-                .orElseGet(LinkedHashSet::new)
-                .stream()
-                .map(menuItemFunction)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList()));
+            menuDTO = menuAndDocumentsToMenuDTO.apply(menu.get(), docs);
+            documentMap = docs.stream().collect(Collectors.toMap(DocumentDTO::getId, Function.identity()));
+        }else{
+            menuDTO = new MenuDTO();
+            menuDTO.setMenuItems(Collections.emptyList());
 
-        final Predicate<MenuItemDTO> menuItemAccessFilter = menuItemDTO ->
-                (status == MenuItemsStatus.ALL || (documentMenuService.isPublicMenuItem(menuItemDTO.getDocumentId()) &&
-                        documentMenuService.hasUserAccessToDoc(menuItemDTO.getDocumentId(), user))) &&
-                        isMenuItemAccessibleForLang(language, versionService::getLatestVersion).test(menuItemDTO);
+            documentMap = Collections.emptyMap();
+        }
+
+        final List<MenuItemDTO> sortedMenuItems = getSortedMenuItemsBySortOrder(menuDTO.getMenuItems());
+
+        final Predicate<MenuItemDTO> menuItemAccessFilter = menuItemDTO -> {
+            final DocumentDTO documentDTO = documentMap.get(menuItemDTO.getDocumentId());
+            return (status == MenuItemsStatus.ALL || (documentMenuService.isPublicMenuItem(documentDTO) &&
+                    documentMenuService.hasUserAccessToDoc(documentDTO, user))) &&
+                    isMenuItemAccessibleForLang(language, documentDTO).test(menuItemDTO);
+        };
 
         final List<MenuItemDTO> filteredMenuItems = sortedMenuItems.stream()
                 .filter(menuItemAccessFilter)
                 .collect(Collectors.toList());
 
+        //filter child menu elements
         filteredMenuItems.forEach(new Consumer<>(){
             @Override
             public void accept(MenuItemDTO menuItemDTO) {
                 List<MenuItemDTO> filteredChildrenMenuItems = menuItemDTO.getChildren().stream()
                         .filter(menuItemAccessFilter)
                         .collect(Collectors.toList());
-                menuItemDTO.setChildren(filteredChildrenMenuItems);
 
                 filteredChildrenMenuItems.forEach(this);
+
+                menuItemDTO.setChildren(filteredChildrenMenuItems);
             }
         });
 
-        final MenuDTO menuDTO = menu.map(menuToMenuDTO).orElse(new MenuDTO());
-
         menuDTO.setMenuItems(filteredMenuItems);
-
         return menuDTO;
     }
 
@@ -442,7 +428,6 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
         final List<MenuItemDTO> newMenuItems = new ArrayList<>();
 
         sortedMenuItems.forEach(mainItemDTO -> {
-
             final List<MenuItemDTO> children = sortedMenuItems.stream()
                     .filter(item -> item.getSortOrder().matches(mainItemDTO.getSortOrder().concat(REGEX_ANY_NUMBER)))
                     .collect(Collectors.toList());
@@ -460,14 +445,14 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
     }
 
     private boolean checkToContainsMenuItemInNewList(List<MenuItemDTO> newMenuItems, List<MenuItemDTO> children) {
-        final List<Integer> ids = newMenuItems.stream()
+        final Set<Integer> ids = newMenuItems.stream()
                 .flatMap(MenuItemDTO::flattened)
                 .map(MenuItemDTO::getDocumentId)
-                .collect(Collectors.toList());
+                .collect(Collectors.toSet());
 
-        final List<Integer> childrenIds = children.stream()
+        final Set<Integer> childrenIds = children.stream()
                 .map(MenuItemDTO::getDocumentId)
-                .collect(Collectors.toList());
+                .collect(Collectors.toSet());
         return ids.containsAll(childrenIds);
     }
 
@@ -488,32 +473,21 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
         return newMenuItems2;
     }
 
-    private Predicate<MenuItemDTO> isMenuItemAccessibleForLang(Language language, Function<Integer, Version> versionReceiver) {
+    private Predicate<MenuItemDTO> isMenuItemAccessibleForLang(Language language, DocumentDTO documentDTO) {
         return menuItemDTO -> {
-            final int versionNo = versionService.getVersion(menuItemDTO.getDocumentId(), versionReceiver).getNo();
-
-            final List<CommonContent> menuItemDocContent = commonContentService.getOrCreateCommonContents(menuItemDTO.getDocumentId(), versionNo);
-
-            final List<Language> enabledLanguages = menuItemDocContent.stream()
-                    .filter(item -> item.getLanguage().isEnabled())
+            final List<Language> enabledLanguages = documentDTO.getCommonContents().stream()
+                    .filter(CommonContent::isEnabled)
                     .map(CommonContent::getLanguage)
-                    .collect(Collectors.toList());
+                    .filter(Language::isEnabled)
+                    .toList();
 
             final boolean isLanguageEnabled = enabledLanguages.contains(language);
             final boolean isCurrentLangDefault = language.getCode().equals(Imcms.getServices().getLanguageMapper().getDefaultLanguage());
-            final boolean isAllowedToShowWithDefaultLanguage = documentMenuService.getDisabledLanguageShowMode(menuItemDTO.getDocumentId()).equals(SHOW_IN_DEFAULT_LANGUAGE);
+            final boolean isAllowedToShowWithDefaultLanguage = documentDTO.getDisabledLanguageShowMode().equals(SHOW_IN_DEFAULT_LANGUAGE);
 
             return isLanguageEnabled || (!isCurrentLangDefault && isAllowedToShowWithDefaultLanguage);
         };
 
-    }
-
-    private void setHasNewerVersionsInItems(List<MenuItemDTO> items) {
-        items.stream()
-                .flatMap(MenuItemDTO::flattened)
-                .peek(docItem ->
-                        docItem.setHasNewerVersion(versionService.hasNewerVersion(docItem.getDocumentId()))
-                );
     }
 
     private List<MenuItemDTO> getSortingMenuItemsByTypeSort(String typeSort, List<MenuItemDTO> menuItems) {
@@ -523,48 +497,50 @@ public class DefaultMenuService extends AbstractVersionedContentService<Menu, Me
             case MANUAL:
                 return convertItemsToFlatList(menuItems, true);
             case ALPHABETICAL_ASC:
-                return convertItemsToFlatList(menuItems.stream()
+                return convertItemsToFlatList(menuItems, true).stream()
                         .sorted(Comparator.comparing(MenuItemDTO::getTitle,
                                 Comparator.nullsLast(String::compareToIgnoreCase)))
-                        .collect(Collectors.toList()), true);
+                        .collect(Collectors.toList());
             case ALPHABETICAL_DESC:
-                return convertItemsToFlatList(menuItems.stream()
+                return convertItemsToFlatList(menuItems, true).stream()
                         .sorted(Comparator.comparing(MenuItemDTO::getTitle,
                                 Comparator.nullsLast(String::compareToIgnoreCase)).reversed())
-                        .collect(Collectors.toList()), true);
+                        .collect(Collectors.toList());
             case PUBLISHED_DATE_ASC:
-                return convertItemsToFlatList(menuItems.stream()
+                return convertItemsToFlatList(menuItems, true).stream()
                         .sorted(Comparator.comparing(MenuItemDTO::getPublishedDate,
                                 Comparator.nullsLast(Comparator.reverseOrder())))
-                        .collect(Collectors.toList()), true);
+                        .collect(Collectors.toList());
             case PUBLISHED_DATE_DESC:
-                return convertItemsToFlatList(menuItems.stream()
+                return convertItemsToFlatList(menuItems, true).stream()
                         .sorted(Comparator.comparing(MenuItemDTO::getPublishedDate,
                                 Comparator.nullsLast(Comparator.naturalOrder())))
-                        .collect(Collectors.toList()), true);
+                        .collect(Collectors.toList());
             case MODIFIED_DATE_ASC:
-                return convertItemsToFlatList(menuItems.stream()
+                return convertItemsToFlatList(menuItems, true).stream()
                         .sorted(Comparator.comparing(MenuItemDTO::getModifiedDate,
                                 Comparator.nullsLast(Comparator.reverseOrder())))
-                        .collect(Collectors.toList()), true);
+                        .collect(Collectors.toList());
             case MODIFIED_DATE_DESC:
-                return convertItemsToFlatList(menuItems.stream()
+                return convertItemsToFlatList(menuItems, true).stream()
                         .sorted(Comparator.comparing(MenuItemDTO::getModifiedDate,
                                 Comparator.nullsLast(Comparator.naturalOrder())))
-                        .collect(Collectors.toList()), true);
+                        .collect(Collectors.toList());
             default:
                 return Collections.EMPTY_LIST;//never come true...
         }
     }
 
     private List<MenuItemDTO> convertItemsToFlatList(List<MenuItemDTO> menuItems, boolean isSetEmptyChildren) {
-        return menuItems.stream()
+        List<MenuItemDTO> result = menuItems.stream()
                 .flatMap(MenuItemDTO::flattened)
                 .distinct()
-                .peek(item -> {
-                    if (isSetEmptyChildren && !item.getChildren().isEmpty()) item.setChildren(Collections.emptyList());
-                })
                 .collect(Collectors.toList());
+        result.forEach(item -> {
+            if (isSetEmptyChildren && !item.getChildren().isEmpty()) item.setChildren(Collections.emptyList());
+        });
+
+        return result;
     }
 
     private List<MenuItemDTO> getMenuItemsWithIndex(List<MenuItemDTO> menuItems) {
